# DORMA-pipeline

./: .dockerignore  .env  .gitignore  AI_INTEGRATION_GUIDE.md  Dockerfile  TESTING.md  brain.py  database.py  docker-compose.yml  environment.yml  face.py  faces.json  readme.md  requirements.txt  run.py  server.py  transcript.py  vitals.py
mongodb/: agent_story.py  combined_input_builder.py  conversation_agent.py  db.py  example_usage.py  init_dbs.py  log_event.py  realtime_conversation.py  reply_api.py  seed_demo_user.py  test_conversation_agent.py  test_voice_pipeline.py  voice_11labs.py
presage_processor/: CMakeLists.txt  main.cc
server/: main.py  state.py
server/routers/: audio.py  playback.py  signaling.py  transcript.py  video.py
server/services/: faces.py  transcribe.py
server/static/: index.html
static/: index.html
